--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <p>Doro Wat is a spicy, delicious Ethiopian and Eritrean chicken stew. It is a part of a larger Ethiopian meal, commonly served with other dishes like braised cabbage, carrots and potatoes, Misir Wat and Zilzil Tibs with injera, a sour fermented pancake-like flatbread with a slightly spongy texture.</p>
     <footer>
         <a href="/">Homepage</a>
-        <a href="image/doro wet.webp">Photo</a>
+        <a href="photo.html">Photo</a>
         <a href="contact.html">Contact</a>
     </footer>
 </body>
