--- a/photo.html
+++ b/photo.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="src/styles.css" rel="stylesheet">
     <title>Photo</title>
 </head>
 <body>
+    <h1> Picture of Doro Wat </h1>
+    <div><img src="image/doro wet.webp" width="100px"/></div>
+    
+        <footer>
+            <a href="index.html">Homepage</a>
+            <a href="/">Photo</a>
+            <a href="contact.html">Contact</a>
+        </footer>
     
 </body>
 </html>
