write contact us page and link css

--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="src/styles.css" rel="stylesheet">
     <title>Contact</title>
 </head>
 <body>
+    <h1> Contact Us</h1>
+    <p> for more info please contact us by email <a href=" mailto:dorowet@gmail.com">dorowet@gmail.com</a></p>
+    
+        <footer class="pic">
+            <a href="index.html">Homepage</a>
+            <a href="photo.html">Photo</a>
+            <a href="contact.html">Contact</a>
+        </footer>
     
 </body>
 </html>
