--- a/photo.html
+++ b/photo.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <h1> Picture of Doro Wat </h1>
-    <div><img src="image/doro wet.webp" width="100px"/></div>
+    <div><img src="image/doro wet.webp" width="600px"/></div>
     
-        <footer>
+        <footer class="pic">
             <a href="index.html">Homepage</a>
-            <a href="/">Photo</a>
+            <a href="photo.html">Photo</a>
             <a href="contact.html">Contact</a>
         </footer>
     
