--- a/photo.html
+++ b/photo.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="src/styles.css" rel="stylesheet">
-    <title>Photo</title>
+    <meta name="description" content=" Traditional food of ethiopian Dorowet Picture">
+    <title>Photo of Doro wet</title>
 </head>
 <body>
     <h1> Picture of Doro Wat </h1>
     <div><img src="image/doro wet.webp" width="600px"/></div>
     
         <footer class="pic">
-            <a href="index.html">Homepage</a>
-            <a href="photo.html">Photo</a>
-            <a href="contact.html">Contact</a>
+            <a href="index.html" title="Home">Homepage</a>
+            <a href="photo.html" title="Photo">Photo</a>
+            <a href="contact.html" title="Contact">Contact</a>
         </footer>
     
 </body>
