--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="src/styles.css" rel="stylesheet">
-    <title>Home</title>
+    <meta name="description" content="All about the traditional food of ethiopian Dorowet">
+    <title>Traditional Ethiopian Food </title>
 </head>
 <body>
     <div><img src="image/ethiopiaflag.png" width="100px"/></div>
 <h1>Doro Wat – A Traditional Ethiopian Chicken Stew</h1>
 <p>Doro Wat is a spicy, delicious Ethiopian and Eritrean chicken stew. It is a part of a larger Ethiopian meal, commonly served with other dishes like braised cabbage, carrots and potatoes, Misir Wat and Zilzil Tibs with injera, a sour fermented pancake-like flatbread with a slightly spongy texture.</p>
     <footer>
-        <a href="/">Homepage</a>
-        <a href="photo.html">Photo</a>
-        <a href="contact.html">Contact</a>
+        <a href="/" title="Home">Homepage</a>
+        <a href="photo.html" title="Photo">Photo</a>
+        <a href="contact.html" title="Contact">Contact</a>
     </footer>
 </body>
 </html>
